Test follow user